--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>
-      clarksmp.com
+      ka1serbtw.github.io/website
     </title>
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body class="background">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">ClarkSMP</a>
+        <a class="navbar-brand" href="#">TomatoSMP</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,7 +20,7 @@
               <a class="nav-link" aria-current="page" href="#">Home &raquo;</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://rentry.co/clarksmp_rules">Rules &raquo;</a>
+              <a class="nav-link" href="https://rentry.co/tsmps5rules">Rules &raquo;</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdsAX9BitSa8gB7aS1hml6QAigQy_AsK9ks3vlei9Om5fevww/viewform?usp=sf_link">Application &raquo;</a>
@@ -35,9 +35,9 @@
     </nav>
     <main class="container">
       <div class="bg-light p-5 rounded">
-        <h1>Welcome to the ClarkSMP website!</h1>
-        <p class="lead">Hi and welcome to the ClarkSMP. <br>If this form doesn't load, use the link on the top left corner</p>
-        <a class="btn btn-lg btn-primar" href="https://rentry.co/clarksmp_rules" role="button">Rules &raquo;</a>
+        <h1>Welcome to the TomatoSMP website!</h1>
+        <p class="lead">TomatoSMP Official Site. <br>If this form doesn't load, use the link on the top left corner</p>
+        <a class="btn btn-lg btn-primar" href="https://rentry.co/tsmps5rules" role="button">Rules &raquo;</a>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsAX9BitSa8gB7aS1hml6QAigQy_AsK9ks3vlei9Om5fevww/viewform?embedded=true" width="640" height="1460" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </main>
