--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="https://rentry.co/tsmps5rules">Rules &raquo;</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSdsAX9BitSa8gB7aS1hml6QAigQy_AsK9ks3vlei9Om5fevww/viewform?usp=sf_link">Application &raquo;</a>
+              <a class="nav-link" href="https://rentry.co/tsmps5suggestions">🠒 Suggestion Box 🠐 &raquo;</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -38,7 +38,6 @@
         <h1>Welcome to the TomatoSMP website!</h1>
         <p class="lead">TomatoSMP Official Site. <br>If this form doesn't load, use the link on the top left corner</p>
         <a class="btn btn-lg btn-primar" href="https://rentry.co/tsmps5rules" role="button">Rules &raquo;</a>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsAX9BitSa8gB7aS1hml6QAigQy_AsK9ks3vlei9Om5fevww/viewform?embedded=true" width="640" height="1460" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </main>
     <h1><h1/>
