--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav-link" href="https://rentry.co/tsmps5rules">Rules &raquo;</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://rentry.co/tsmps5suggestions">🠒 Suggestion Box 🠐 &raquo;</a>
+              <a class="nav-link" href="https://rentry.co/tsmps5suggestions">Suggestion Box &raquo;</a>
             </li>
           </ul>
           <form class="d-flex">
