--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main class="container">
       <div class="bg-light p-5 rounded">
         <h1>Welcome to the TomatoSMP website!</h1>
-        <p class="lead">TomatoSMP Official Site. <br>If this form doesn't load, use the link on the top left corner</p>
+        <p class="lead">TomatoSMP Official Site. <br>Good luck!</p>
         <a class="btn btn-lg btn-primar" href="https://rentry.co/tsmps5rules" role="button">Rules &raquo;</a>
       </div>
     </main>
