--- a/index.html
+++ b/index.html
@@ -8,61 +8,6 @@
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body class="background">
-    <!-- Header -->
-<header class="bg-primary text-center py-5 mb-4">
-  <div class="container">
-    <h1 class="fw-light text-white">Meet the Team</h1>
-  </div>
-</header>
-
-<!-- Page Content -->
-<div class="container">
-  <div class="row">
-    <!-- Team Member 1 -->
-    <div class="col-xl-3 col-md-6 mb-4">
-      <div class="card border-0 shadow">
-        <img src="https://source.unsplash.com/TMgQMXoglsM/500x350" class="card-img-top" alt="...">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
-          <div class="card-text text-black-50">Web Developer</div>
-        </div>
-      </div>
-    </div>
-    <!-- Team Member 2 -->
-    <div class="col-xl-3 col-md-6 mb-4">
-      <div class="card border-0 shadow">
-        <img src="https://source.unsplash.com/9UVmlIb0wJU/500x350" class="card-img-top" alt="...">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
-          <div class="card-text text-black-50">Web Developer</div>
-        </div>
-      </div>
-    </div>
-    <!-- Team Member 3 -->
-    <div class="col-xl-3 col-md-6 mb-4">
-      <div class="card border-0 shadow">
-        <img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
-          <div class="card-text text-black-50">Web Developer</div>
-        </div>
-      </div>
-    </div>
-    <!-- Team Member 4 -->
-    <div class="col-xl-3 col-md-6 mb-4">
-      <div class="card border-0 shadow">
-        <img src="https://source.unsplash.com/7u5mwbu7qLg/500x350" class="card-img-top" alt="...">
-        <div class="card-body text-center">
-          <h5 class="card-title mb-0">Team Member</h5>
-          <div class="card-text text-black-50">Web Developer</div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- /.row -->
-
-</div>
-<!-- /.container -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">TomatoSMP</a>
@@ -75,10 +20,13 @@
               <a class="nav-link" aria-current="page" href="#">Home &raquo;</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://rentry.co/tsmps5rules">Rules &raquo;</a>
+              <a class="nav-link" href="https://rentry.co/tsmps5rules"https://docs.google.com/forms/d/e/1FAIpQLSfX6A_Ob6VKbxDqeYD-dM5TBXkXNaS8rUYHw2lXx-r4rTYLqg/viewform?usp=sf_link>Rules &raquo;</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://rentry.co/tsmps5suggestions">Suggestion Box &raquo;</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://docs.google.com/forms/d/e/1FAIpQLSfX6A_Ob6VKbxDqeYD-dM5TBXkXNaS8rUYHw2lXx-r4rTYLqg/viewform?usp=sf_link">Join Request &raquo;</a>
             </li>
           </ul>
           <form class="d-flex">
